--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -14,7 +14,7 @@
 <!--</form>-->
 
 <form name="sendAvatarDefault">
-    <h1>To Default</h1>
+    <h1>To Azure</h1>
     <input type="file" name="avatar">
     <input type="submit">
 </form>
