--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -14,13 +14,13 @@
 <!--</form>-->
 
 <form name="sendAvatarDefault">
-    <h1>To Azure</h1>
+    <h1> Upload To Azure</h1>
     <input type="file" name="avatar">
     <input type="submit">
 </form>
 
 <form name="sendAvatarLocal">
-    <h1>To Local</h1>
+    <h1>Upload To Local</h1>
     <input type="file" name="avatar">
     <input type="submit">
 </form>
