--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -12,7 +12,7 @@
 <!--  <input type="submit">-->
 
 <!--</form>-->
-<h1> DEPLOY AFTER COMMIT</h1>
+<h1> DEPLOY AFTER COMMIT AAAAAAAAAAAAAAAAAAAAAA</h1>
 <form name="sendAvatarDefault">
     <h1> Upload To Azure</h1>
     <input type="file" name="avatar">
